--- a/FilmSpil_Bibliotek/MainWindow.xaml
+++ b/FilmSpil_Bibliotek/MainWindow.xaml
@@ -1,9 +1,13 @@
 ﻿<Window x:Class="FilmSpil_Bibliotek.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Film og Spil Bibliotek" WindowStartupLocation="CenterScreen" Height="250" Width="500">
     <Grid>
-        <Button Name="Test" Content="Test" HorizontalAlignment="Left" Margin="103,102,0,0" VerticalAlignment="Top" Width="75" Click="Test_Click"/>
-
+        <Label Content="Film og Spil Bibliotek" FontSize="50px" FontStyle="Italic" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="474"/>
+        <Label Content="Film" FontSize="30px" HorizontalAlignment="Left" Margin="89,106,0,0" VerticalAlignment="Top"/>
+        <Label Content="Spil" FontSize="30px" HorizontalAlignment="Left" Margin="320,106,0,0" VerticalAlignment="Top"/>
+        <Button Name="Film_Button" Content="Film" HorizontalAlignment="Left" Margin="89,155,0,0" VerticalAlignment="Top" Width="85" Height="30"/>
+        <Button Name="Spil_Button" Content="Spil" HorizontalAlignment="Left" Margin="320,154,0,0" VerticalAlignment="Top" Width="85" Height="30"/>
+        
     </Grid>
 </Window>
